Multitenancy/k8s/istio/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: productivity
spec:
  mtls:
    mode: STRICT
