Multitenancy/k8s/istio/productivity-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: productivity
  labels:
    istio-injection: enabled
