Multitenancy/k8s/istio/destinationrule-api.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: productivity-api
  namespace: productivity
spec:
  host: productivity-api.productivity.svc.cluster.local
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 1000
        maxRequestsPerConnection: 100
      tcp:
        maxConnections: 200
    outlierDetection:
      consecutive5xxErrors: 5
      interval: 5s
      baseEjectionTime: 30s
      maxEjectionPercent: 50
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
