Multitenancy/k8s/istio/destinationrule-core.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: core
  namespace: productivity
spec:
  host: core
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
