Multitenancy/k8s/istio/virtualservice-attachments-canary.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: attachments
  namespace: productivity
spec:
  hosts:
    - attachments
  http:
    - route:
        - destination:
            host: attachments
            subset: v1
          weight: 90
        - destination:
            host: attachments
            subset: v2
          weight: 10
