Multitenancy/k8s/istio/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: productivty-api-deny-by-default
  namespace: productivity
spec:
  selector:
    matchLabels:
      app: productivity-api
  action: DENY
  rules:
    - {}

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: productivity-api-allow-http
  namespace: productivity
spec:
  selector:
    matchLabels:
      app: productivity-api
  action: ALLOW
  rules:
    - to:
        - operation:
            methods: ["GET","POST","PUT","DELETE","PATCH","HEAD","OPTIONS"]
